alteracoes openapi e reformulacao estrutura
