# src/api/openapi.yaml
@@ -463,12 +463,29 @@ paths:
         "404":
           description: Id not found
       x-swagger-router-controller: UtilizadoresController
-  /antenas_favoritas:
+  /antenas_favoritas/{id_utilizador}:
     get:
       tags:
       - AntenasFavoritasController
       summary: Retrieve Antenas Favoritas
       operationId: retrieveAntenasFavoritas
+      parameters:
+      - name: id_utilizador
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          minimum: 1
+          type: integer
+          format: int64
+        examples:
+          one:
+            summary: Delete Antena Favorita id 1
+            value: 1
+          two:
+            summary: Delete Antena Favorita id 2
+            value: 2
       responses:
         "200":
           description: Array of Antenas Favoritas model instances
@@ -480,16 +497,45 @@ paths:
                   $ref: '#/components/schemas/AntenaFavorita'
                 x-content-type: application/json
       x-swagger-router-controller: AntenasFavoritasController
+  /antenas_favoritas/{id_utilizador}/{id_antena}:
     post:
       tags:
       - AntenasFavoritasController
       summary: Create Antena Favorita
       operationId: createAntenaFavorita
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AntenaFavorita'
+      parameters:
+      - name: id_utilizador
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          minimum: 1
+          type: integer
+          format: int64
+        examples:
+          one:
+            summary: Delete Antena Favorita id 1
+            value: 1
+          two:
+            summary: Delete Antena Favorita id 2
+            value: 2
+      - name: id_antena
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          minimum: 1
+          type: integer
+          format: int64
+        examples:
+          one:
+            summary: Delete Antena Favorita id 1
+            value: 1
+          two:
+            summary: Delete Antena Favorita id 2
+            value: 2
       responses:
         "200":
           description: Create a Antena Favorita model instance
@@ -497,15 +543,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AntenaFavorita'
-      x-swagger-router-controller: AntenaFavoritaController
-  /antenas_favoritas/{id}:
+      x-swagger-router-controller: AntenasFavoritasController
     delete:
       tags:
       - AntenasFavoritasController
       summary: Delete Antena Favorita
       operationId: deleteAntenaFavorita
       parameters:
-      - name: id
+      - name: id_utilizador
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          minimum: 1
+          type: integer
+          format: int64
+        examples:
+          one:
+            summary: Delete Antena Favorita id 1
+            value: 1
+          two:
+            summary: Delete Antena Favorita id 2
+            value: 2
+      - name: id_antena
         in: path
         required: true
         style: simple
@@ -528,22 +589,6 @@ paths:
           description: Id not found
       x-swagger-router-controller: AntenasFavoritasController
   /comentarios:
-    get:
-      tags:
-      - ComentariosController
-      summary: Retrieve Comentarios
-      operationId: retrieveComentarios
-      responses:
-        "200":
-          description: Array of Comentarios model instances
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Comentario'
-                x-content-type: application/json
-      x-swagger-router-controller: ComentariosController
     post:
       tags:
       - ComentariosController
@@ -563,6 +608,47 @@ paths:
                 $ref: '#/components/schemas/Comentario'
       x-swagger-router-controller: ComentarioController
   /comentarios/{id}:
+    get:
+      tags:
+      - ComentariosController
+      summary: Retrieve Comentarios
+      operationId: retrieveComentarios
+      parameters:
+      - name: type
+        in: query
+        description: Array filter by name of Antena
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      - name: id
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          minimum: 1
+          type: integer
+          format: int64
+        examples:
+          one:
+            summary: Delete Comentario id 1
+            value: 1
+          two:
+            summary: Delete Comentario id 2
+            value: 2
+      responses:
+        "200":
+          description: Array of Comentarios model instances
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Comentario'
+                x-content-type: application/json
+      x-swagger-router-controller: ComentariosController
     delete:
       tags:
       - ComentariosController
@@ -597,6 +683,7 @@ components:
       title: Avaria
       required:
       - data_abertura
+      - id_antena
       - id_utilizador
       - nome
       - status
@@ -610,24 +697,27 @@ components:
         id_utilizador:
           type: integer
           format: int64
+        id_antena:
+          type: integer
+          format: int64
         status:
           type: boolean
         data_abertura:
-          type: string
-          format: date-time
+          type: integer
+          format: int64
         data_conclusao:
-          type: string
-          format: date-time
+          type: integer
+          format: int64
         detalhe:
           type: string
       example:
-        id: 1
         nome: Antena Espinho
         id_utilizador: 33432
+        id_antena: 12
         status: true
-        data_abertura: {}
-        data_conclusao: ""
-        detalhe: SITE DOWN
+        detalhe: Sem sinal
+        data_abertura: 1621683481201
+        data_conclusao: 1621683502168
     Antena:
       title: Antena
       required:
@@ -641,14 +731,14 @@ components:
           format: int64
         nome:
           type: string
-        latidude:
+        latitude:
           type: number
         longitude:
           type: number
       example:
-        id: 1
         nome: Antena Espinho
-        coordenadas: "41.007336, -8.633650"
+        latitude: 41.007336
+        longitude: -8.63365
     AntenaFavorita:
       title: Antena Favorita
       required:
@@ -663,16 +753,19 @@ components:
           type: integer
           format: int64
       example:
-        id: 1
-        id_utilizador: 1
-        id_antena: 1
+        id_antena: 6
+        id_utilizador: 0
     Comentario:
       title: Comentario
       required:
+      - conteudo
       - id_antena
       - id_utilizador
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
         id_utilizador:
           type: integer
           format: int64
@@ -681,14 +774,14 @@ components:
           format: int64
         conteudo:
           type: string
-        timestamp:
-          type: string
+        data_criacao:
+          type: integer
+          format: int64
       example:
-        id: 1
         id_utilizador: 1
         id_antena: 1
         conteudo: Antena sem baterias
-        timestamp: 10-04-2021 09:00:00
+        data_criacao: 1621682832263
     Utilizador:
       title: Utilizador
       required:
@@ -704,6 +797,8 @@ components:
           format: int64
         nome:
           type: string
+        email:
+          type: string
         cargo:
           type: string
         telefone:
@@ -711,10 +806,10 @@ components:
         password:
           type: string
       example:
-        id: 1
         nome: Lucas
         cargo: Admin
-        telefone: 919999999
+        email: lucas@gmail.com
+        telefone: "919999999"
         password: Admin123
   examples:
     AvariaExemplo01:
@@ -722,56 +817,60 @@ components:
         id: 1
         nome: Antena Espinho
         id_utilizador: 33432
+        id_antena: 12
         status: true
-        data_abertura: {}
-        data_conclusao: ""
+        data_abertura: 1621682832263
+        data_conclusao: 1621682832263
         detalhe: SITE DOWN
     AvariaExemplo02:
       value:
         id: 2
         nome: Antena Braga
         id_utilizador: 32332
+        id_antena: 14
         status: false
-        data_abertura: {}
-        data_conclusao: {}
+        data_abertura: 1621682832263
+        data_conclusao: 1621682832263
         detalhe: ""
     AntenaExemplo01:
       value:
         id: 1
         nome: Antena Espinho
-        latitude: "41.007336"
-        longitude: "-8.633650"
+        latitude: 41.007336
+        longitude: -8.63365
     AntenaExemplo02:
       value:
         id: 2
         nome: Antena Braga
-        latitude: "41.552277"
-        longitude: "-8.424503"
+        latitude: 41.552277
+        longitude: -8.424503
     ComentarioExemplo01:
       value:
         id: 1
         id_utilizador: 1
         id_antena: 1
         conteudo: Antena sem baterias
-        timestamp: 10-04-2021 09:00:00
+        data_criacao: 1621682832263
     ComentarioExemplo02:
       value:
         id: 2
         id_utilizador: 1
         id_antena: 1
         conteudo: Antena sem energia
-        timestamp: 10-04-2021 09:00:00
+        data_criacao: 1621682832263
     UtilizadorExemplo01:
       value:
         id: 1
         nome: Sergio
+        email: sergio@ismai.pt
         cargo: tecnico
-        telefone: 919999998
+        telefone: "919999998"
         password: Tecnico123
     UtilizadorExemplo02:
       value:
         id: 2
         nome: Tiago
+        email: tiago@ismai.pt
         cargo: gestor
-        telefone: 919999997
+        telefone: "919999998"
         password: Gestor123
