# src/controllers/ComentariosController.js
@@ -3,7 +3,12 @@
 var utils = require('../utils/writer.js');
 var ComentariosController = require('../service/ComentariosControllerService');
 
-module.exports.createComentario = function createComentario (req, res, next, body) {
+module.exports.createComentario = function createComentario(
+  req,
+  res,
+  next,
+  body,
+) {
   ComentariosController.createComentario(body)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -13,7 +18,12 @@ module.exports.createComentario = function createComentario (req, res, next, bod
     });
 };
 
-module.exports.deleteComentario = function deleteComentario (req, res, next, id) {
+module.exports.deleteComentario = function deleteComentario(
+  req,
+  res,
+  next,
+  id,
+) {
   ComentariosController.deleteComentario(id)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -23,8 +33,14 @@ module.exports.deleteComentario = function deleteComentario (req, res, next, id)
     });
 };
 
-module.exports.retrieveComentarios = function retrieveComentarios (req, res, next) {
-  ComentariosController.retrieveComentarios()
+module.exports.retrieveComentarios = function retrieveComentarios(
+  req,
+  res,
+  next,
+  type,
+  id,
+) {
+  ComentariosController.retrieveComentarios(type, id)
     .then(function (response) {
       utils.writeJson(res, response);
     })
